[package]
authors = ["Ricardo Martins <ricardo@scarybox.net>", "Bruno Tavares <connect@github.com>"]
description = "A µTP (Micro/uTorrent Transport Library) library implemented in Rust using async-std"
documentation = "https://github.com/bltavares/async-std-utp"
homepage = "https://github.com/bltavares/async-std-utp"
keywords = ["utp", "networking", "protocol", "transport", "async-std"]
license = "MIT/Apache-2.0"
name = "async-std-utp"
readme = "README.md"
repository = "https://github.com/bltavares/async-std-utp"
version = "0.1.0"
edition = "2018"

[dependencies]
async-std = '1.9.0'
futures = "0.3.15"
async-recursion = "0.3.2"
log = "0.4.14"
num-traits = "0.2.14"
rand = "0.8.3"

[dev-dependencies]
quickcheck = "1.0.3"
env_logger = "0.8.3"
async-std = { version = '1.9.0', features = ['attributes'] }

[features]
unstable = []
